# pnl-bot

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/dex/: mod.rs  pool_monitor.rs  raydium.rs  whirlpool.rs
src/execution/: binance_rest.rs  binance_ws.rs  coordinator.rs  jupiter.rs  mod.rs
src/paper/: mod.rs  paper_engine.rs  pnl_tracker.rs
src/strategy/: mod.rs  price_state.rs  spread_detector.rs
