[package]
name = "pnl"
version = "0.1.0"
edition = "2024"

[dependencies]
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto  = "6.0.0"
bs58    = "0.5"
futures = "0.3"
tonic   = "0.12"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio           = { version = "1", features = ["full"] }
tokio-util      = { version = "0.7", features = ["rt"] }
crossbeam = { version = "0.8.4" }
# features = ["crossbeam-atomic"]

[[bin]]
name = "paper_trade"
path = "src/bin/paper_trade.rs"