[package]
name = "pnl"
version = "0.1.0"
edition = "2021"

[dependencies]
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto  = "6.0.0"
bs58    = "0.5.1"
futures = "0.3"
tonic   = "0.12"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio           = { version = "1", features = ["full"] }
tokio-util      = { version = "0.7", features = ["rt"] }
crossbeam = { version = "0.8.4" }
serde = "1.0.228"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
serde_json = "1.0.149"
hmac = "0.12.1"
sha2 = "0.10.9"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0.18"
hex = "0.4.3"
base64 = "0.22.1"
solana-sdk = "2.2"
solana-client = "2.2"
bincode = "1.3"
# features = ["crossbeam-atomic"]

[[bin]]
name = "paper_trade"
path = "src/bin/paper_trade.rs"
